--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+					Two papers on math reasoning and VLMs are accepted at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
+				</li>
+				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
 					I am co-organizing the <b><a href="https://sites.google.com/view/ai4mathworkshopicml2024" target="_blank">AI for Math</a></b>
 					Workshop at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
@@ -324,45 +328,45 @@
 					<strong>[05/2023]&nbsp;  <font color="red">New!</font></strong>
 					One survey paper on deep learning for mathematical reasoning is accepted to <b>ACL 2023</b></font></b>.
 				</li>
-				<li>
-					<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
-					<b><a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">LLaMA-Adapter-V2</a></b>, 
-					a parameter-efficient visual instruction model</b>, 
-					is available at
-					<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
-					One tutorial proposal on mathematical reasoning is accepted to
-					<b><a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a></b>.
-				</li>
-				<li>
-					<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on tool augmented LLMs
-					(<b><a href="https://chameleon-llm.github.io/" target="_blank">Chameleon</a></b>)
-					is available at
-					<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
-					Two papers are accepted to
-					<b><a href="https://asu-apg.github.io/odrum/" target="_blank">CVPR 2023 O-DRUM Workshop</a></b>.
-					<!-- as an <b><font color="red">Oral Presentation</font></b> -->
-				</li>
-				<li>
-					<strong>[03/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on fine-tuning
-					<b><a href="https://github.com/facebookresearch/llama" target="_blank">LLaMA</a></b>
-					in one hour
-					(<b><a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">LLaMA-Adapter</a></b>)
-					is available at
-					<b><a href="https://arxiv.org/abs/2303.16199" target="_blank">Preprint</a></b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+							<b><a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">LLaMA-Adapter-V2</a></b>, 
+							a parameter-efficient visual instruction model</b>, 
+							is available at
+							<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+							One tutorial proposal on mathematical reasoning is accepted to
+							<b><a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a></b>.
+						</li>
+						<li>
+							<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on tool augmented LLMs
+							(<b><a href="https://chameleon-llm.github.io/" target="_blank">Chameleon</a></b>)
+							is available at
+							<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
+							Two papers are accepted to
+							<b><a href="https://asu-apg.github.io/odrum/" target="_blank">CVPR 2023 O-DRUM Workshop</a></b>.
+							<!-- as an <b><font color="red">Oral Presentation</font></b> -->
+						</li>
+						<li>
+							<strong>[03/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on fine-tuning
+							<b><a href="https://github.com/facebookresearch/llama" target="_blank">LLaMA</a></b>
+							in one hour
+							(<b><a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">LLaMA-Adapter</a></b>)
+							is available at
+							<b><a href="https://arxiv.org/abs/2303.16199" target="_blank">Preprint</a></b>.
+						</li>
 						<li>
 							<strong>[01/2023]&nbsp; <font color="red">New!</font></strong>
 							One paper on in-context learning for math reasoning
@@ -499,6 +503,64 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- SciBench -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_scibench.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
+				</b><br>
+				Xiaoxuan Wang*, Ziniu Hu*, <strong>Pan Lu</strong>*, Yanqiao Zhu*, Jieyu Zhang, Satyen Subramaniam, Arjun R. Loomba, Shichang Zhang, Yizhou Sun, Wei Wang
+				<br>
+				<b><a href="https://arxiv.org/abs/2307.10635" target="_blank">ICML 2024&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2307.10635" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_scibench.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/mandyyyyii/scibench" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/arxiv23_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				(*Equal Contribution)<br>
+				<a id="best" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
+					<font color="red"><b>Nature News Feature</b> </font>
+				</a>
+				(15 November 2023)
+			</div>
+		</div>
+		<hr>
+
+		<!-- SPHINX-X -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_sphinx.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<!-- <a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a> -->
+				<b>
+					<font color="black">SPHINX-X: Scaling Data and Parameters for a Family of Multi-modal Large Language Models
+					</font>
+				</b><br>
+				Peng Gao, Renrui Zhang, Chris Liu, Longtian Qiu, Siyuan Huang, Weifeng Lin, Shitian Zhao, Shijie Geng, Ziyi Lin, Peng Jin, Kaipeng Zhang, Wenqi Shao, Chao Xu, Conghui He, Junjun He, Hao Shao, <b>Pan Lu</b>, Hongsheng Li, Yu Qiao
+				<br>
+				<b><a href="https://arxiv.org/abs/2402.05935" target="_blank">ICML 2024&nbsp;</a></b>
+				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="https://arxiv.org/abs/2402.05935" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2402.05935.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/Alpha-VLLM/LLaMA2-Accessory" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://llama2-accessory.readthedocs.io/en/latest/" target="_blank"> <small>[Doc]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2402.05935" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1755794618019368978" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv24_sphinx.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- MathVista -->
 		<div class="row">
 			<div class="col-md-3">
@@ -582,35 +644,6 @@
 				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<a href="https://twitter.com/xxxxiaol/status/1763061050868674890" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/arxiv24_qrdata.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- SPHINX-X -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_sphinx.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<!-- <a href="https://mathvista.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
-				</a> -->
-				<b>
-					<font color="black">SPHINX-X: Scaling Data and Parameters for a Family of Multi-modal Large Language Models
-					</font>
-				</b><br>
-				Peng Gao, Renrui Zhang, Chris Liu, Longtian Qiu, Siyuan Huang, Weifeng Lin, Shitian Zhao, Shijie Geng, Ziyi Lin, Peng Jin, Kaipeng Zhang, Wenqi Shao, Chao Xu, Conghui He, Junjun He, Hao Shao, <b>Pan Lu</b>, Hongsheng Li, Yu Qiao
-				<br>
-				<b><a href="https://arxiv.org/abs/2402.05935" target="_blank">arXiv:2402.05935&nbsp;</a></b>
-				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
-				<a href="https://arxiv.org/abs/2402.05935" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2402.05935.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/Alpha-VLLM/LLaMA2-Accessory" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://llama2-accessory.readthedocs.io/en/latest/" target="_blank"> <small>[Doc]&nbsp;</small></a>
-				<a href="https://huggingface.co/papers/2402.05935" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="https://twitter.com/_akhaliq/status/1755794618019368978" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/arxiv24_sphinx.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
@@ -701,35 +734,6 @@
 					<font color="red"><b>NeurIPS 2023 Top 10 Multimodal ML Papers </b> </font>
 				</a>
 
-			</div>
-		</div>
-		<hr>
-
-		<!-- SciBench -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv23_scibench.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
-				</b><br>
-				Xiaoxuan Wang*, Ziniu Hu*, <strong>Pan Lu</strong>*, Yanqiao Zhu*, Jieyu Zhang, Satyen Subramaniam, Arjun R. Loomba, Shichang Zhang, Yizhou Sun, Wei Wang
-				<br>
-				<b><a href="https://arxiv.org/abs/2307.10635" target="_blank">arXiv:2305.00970&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2307.10635" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv23_scibench.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/mandyyyyii/scibench" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/arxiv23_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				(*Equal Contribution)<br>
-				<a id="best" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
-					<font color="red"><b>Nature News Feature</b> </font>
-				</a>
-				(15 November 2023)
 			</div>
 		</div>
 		<hr>
