--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I'm currently a final-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I received my Ph.D. in Computer Science from UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">Amazon PhD Fellowship</a>, 
-						Bloomberg PhD Fellowship, 
+						<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a>, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
 						<a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, 
-						<a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
-						<a href="https://vcla.f.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, 
+						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
+						<a href="https://vcla.f.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>,  -->
 						and NeurIPS Scholar Award.
 
 						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
 						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a> -->
 					</p>
 					<p>
-						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy NLP</strong>, particularly in the domains of mathematics, science, and medicine:
+						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine learning</strong> and <strong>NLP</strong>, particularly <strong>machine reasoning</strong> and <strong>multimodal reasoning</strong> in the domains of mathematics and science:
 					</p>
 					<ul>
 						<li>
@@ -212,7 +212,26 @@
 			<ul>
 				<li>
 					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on enhancing LVLMs with self-training is available at
+					<b><a href="https://arxiv.org/abs/2405.XXXXX" target="_blank">Preprint</a></b>.
+				</li>
+				<li>
+					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+					Thrilled to be awarded the
+					<b><a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a></b>! Thanks!
+				</li>
+				<li>
+					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
+					One paper on advanced quantitative reasoning is accepted to
+					<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a> (Findings)</b>.
+				</li>
+				<li>
+					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
 					Two papers on math reasoning and VLMs are accepted at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
+				</li>
+				<li>
+					<strong>[04/2024]&nbsp; <font color="red">New!</font></strong>
+					Defended my postdoctoral dissertation! Thanks to my advisor and committee members!
 				</li>
 				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
@@ -503,14 +522,121 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- STIC -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_stic.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Enhancing Large Vision Language Models with Self-Training on Image Comprehension
+					</font>
+				</b><br>
+				Yihe Deng*, <b>Pan Lu</b>*, Fan Yin, Ziniu Hu, Sheng Shen, James Zou, Kai-Wei Chang, Wei Wang
+				<br>
+				<b><a href="https://arxiv.org/abs/2405.XXXXX" target="_blank">arXiv:2405.XXXXX&nbsp;</a></b>
+				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2405.XXXXX" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2405.XXXXX.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://huggingface.co/STIC-LVLM" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
+				<a href="https://github.com/yihedeng9/STIC" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/collections/STIC-LVLM/stic-models-6658e7cdfac70f94c2a38af1" target="_blank"> <small>[Model]&nbsp;</small></a>
+				<a href="https://huggingface.co/collections/STIC-LVLM/stic-data-6658e7f93aa5d4bb34ef140b" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<!-- <a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
+				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
+				<a href="bibs/arxiv24_stic.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				(*Equal Contribution)<br>
+			</div>
+		</div>
+		<hr>
+		
+		<!-- MathVerse -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_mathverse.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						MathVerse: Does Your Multi-modal LLM Truly See the Diagrams in Visual Math Problems?
+					</font>
+				</b><br>
+				Renrui Zhang, Dongzhi Jiang, Yichi Zhang, Haokun Lin, Ziyu Guo, Pengshuo Qiu, Aojun Zhou, <b>Pan Lu</b>, Kai-Wei Chang, Peng Gao, Hongsheng Li
+				<br>
+				<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">arXiv:2403.14624&nbsp;</a></b>
+				<a href="https://mathverse-cuhk.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2403.14624" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2403.14624.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/ZrrSkywalker/MathVerse" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/MathVerse" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://mathverse-cuhk.github.io/#visualization" target="_blank"> <small>[Visualization]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2403.14624" target="_blank"> <small>[Daily Papers]&nbsp;</small></a>
+				<a href="bibs/arxiv24_mathverse.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+		
+		<!-- Model Editing -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_modelediting.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<!-- <a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a> -->
+				<b>
+					<font color="black">Model Editing Can Hurt General Abilities of Large Language Models</font>
+				</b><br>
+				Jia-Chen Gu, Hao-Xiang Xu, Jun-Yu Ma, <b>Pan Lu</b>, Zhen-Hua Ling, Kai-Wei Chang, Nanyun Peng
+				<br>
+				<b><a href="https://arxiv.org/abs/2401.04700" target="_blank">arXiv:2401.04700&nbsp;</a></b>
+				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="https://arxiv.org/abs/2401.04700" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2401.04700.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/JasonForJoy/Model-Editing-Hurt" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
+				<a href="bibs/arxiv24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- QRData -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/acl24_qrdata.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Are LLMs Capable of Data-based Statistical and Causal Reasoning? Benchmarking Advanced Quantitative Reasoning with Data
+					</font>
+				</b><br>
+				Xiao Liu, Zirui Wu, Xueqing Wu, <b>Pan Lu</b>, Kai-Wei Chang, Yansong Feng
+				<br>
+				<b><a href="https://2024.aclweb.org/" target="_blank">ACL 2024&nbsp;</a> (Findings)</b>
+				<a href="https://xxxiaol.github.io/QRData/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2402.17644" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2402.17644.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://twitter.com/xxxxiaol/status/1763061050868674890" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/acl24_qrdata.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- SciBench -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv23_scibench.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/icml24_scibench.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
@@ -519,10 +645,10 @@
 				<br>
 				<b><a href="https://arxiv.org/abs/2307.10635" target="_blank">ICML 2024&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2307.10635" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv23_scibench.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/icml24_scibench.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/mandyyyyii/scibench" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/arxiv23_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/icml24_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				(*Equal Contribution)<br>
 				<a id="best" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
 					<font color="red"><b>Nature News Feature</b> </font>
@@ -535,7 +661,7 @@
 		<!-- SPHINX-X -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_sphinx.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/icml24_sphinx.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="https://mathvista.github.io/">
@@ -556,7 +682,7 @@
 				<a href="https://huggingface.co/papers/2402.05935" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1755794618019368978" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/arxiv24_sphinx.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/icml24_sphinx.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
@@ -592,84 +718,6 @@
 				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
 					<font color="red"><b>CryptoRank News Feature</b> </font>
 				</a> (29 October 2023) <br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- MathVerse -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_mathverse.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b>
-					<font color="black">
-						MathVerse: Does Your Multi-modal LLM Truly See the Diagrams in Visual Math Problems?
-					</font>
-				</b><br>
-				Renrui Zhang, Dongzhi Jiang, Yichi Zhang, Haokun Lin, Ziyu Guo, Pengshuo Qiu, Aojun Zhou, <b>Pan Lu</b>, Kai-Wei Chang, Peng Gao, Hongsheng Li
-				<br>
-				<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">arXiv:2403.14624&nbsp;</a></b>
-				<a href="https://mathverse-cuhk.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2403.14624" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2403.14624.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/ZrrSkywalker/MathVerse" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://huggingface.co/datasets/AI4Math/MathVerse" target="_blank"> <small>[Data]&nbsp;</small></a>
-				<a href="https://mathverse-cuhk.github.io/#visualization" target="_blank"> <small>[Visualization]&nbsp;</small></a>
-				<a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="https://huggingface.co/papers/2403.14624" target="_blank"> <small>[Daily Papers]&nbsp;</small></a>
-				<a href="bibs/arxiv24_mathverse.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- QRData -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_qrdata.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b>
-					<font color="black">
-						Are LLMs Capable of Data-based Statistical and Causal Reasoning? Benchmarking Advanced Quantitative Reasoning with Data
-					</font>
-				</b><br>
-				Xiao Liu, Zirui Wu, Xueqing Wu, <b>Pan Lu</b>, Kai-Wei Chang, Yansong Feng
-				<br>
-				<b><a href="https://arxiv.org/abs/2402.17644" target="_blank">arXiv:2402.17644&nbsp;</a></b>
-				<a href="https://xxxiaol.github.io/QRData/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2402.17644" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2402.17644.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Data]&nbsp;</small></a>
-				<a href="https://twitter.com/xxxxiaol/status/1763061050868674890" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/arxiv24_qrdata.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-		
-		<!-- Model Editing -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_modelediting.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<!-- <a href="https://mathvista.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
-				</a> -->
-				<b>
-					<font color="black">Model Editing Can Hurt General Abilities of Large Language Models</font>
-				</b><br>
-				Jia-Chen Gu, Hao-Xiang Xu, Jun-Yu Ma, <b>Pan Lu</b>, Zhen-Hua Ling, Kai-Wei Chang, Nanyun Peng
-				<br>
-				<b><a href="https://arxiv.org/abs/2401.04700" target="_blank">arXiv:2401.04700&nbsp;</a></b>
-				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
-				<a href="https://arxiv.org/abs/2401.04700" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2401.04700.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/JasonForJoy/Model-Editing-Hurt" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
-				<a href="bibs/arxiv24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
@@ -924,6 +972,7 @@
 			<div class="col-md-9">
 				<a href="https://scienceqa.github.io/">
 					<!-- <img src="logos/scienceqa.png" id="logo"> -->
+					<img src="logos/fire.png" id="logo">
 					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
