--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<li>
 					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
 					A paper on enhancing LVLMs with self-training is available at
-					<b><a href="https://arxiv.org/abs/2405.XXXXX" target="_blank">Preprint</a></b>.
+					<b><a href="https://arxiv.org/abs/2405.19716" target="_blank">Preprint</a></b>.
 				</li>
 				<li>
 					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
@@ -535,10 +535,10 @@
 				</b><br>
 				Yihe Deng*, <b>Pan Lu</b>*, Fan Yin, Ziniu Hu, Sheng Shen, James Zou, Kai-Wei Chang, Wei Wang
 				<br>
-				<b><a href="https://arxiv.org/abs/2405.XXXXX" target="_blank">arXiv:2405.XXXXX&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2405.19716" target="_blank">arXiv:2405.19716&nbsp;</a></b>
 				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2405.XXXXX" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2405.XXXXX.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2405.19716" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2405.19716.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://huggingface.co/STIC-LVLM" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
 				<a href="https://github.com/yihedeng9/STIC" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/collections/STIC-LVLM/stic-models-6658e7cdfac70f94c2a38af1" target="_blank"> <small>[Model]&nbsp;</small></a>
